--- a/index.html
+++ b/index.html
@@ -973,12 +973,18 @@ Total Net Weight: 5 tons
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; 2025 True Future Living. All rights reserved.</p>
-      <p class="socials">
-        <a href="#">Facebook</a> | 
-        <a href="#">Twitter</a> | 
-        <a href="#">LinkedIn</a>
+      <p class="socials" style="margin-bottom: 20px;">
+        <a href="https://instagram.com/yourprofile" target="_blank" title="Instagram">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://tiktok.com/@yourprofile" target="_blank" title="TikTok">
+          <i class="fa-brands fa-tiktok"></i>
+        </a>
+        <a href="https://facebook.com/yourprofile" target="_blank" title="Facebook">
+          <i class="fab fa-facebook"></i>
+        </a>
       </p>
+      <p>&copy; 2025 True Future Living. All rights reserved.</p>
     </div>
   </footer>
   
