--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
       color: #f0f0f0;
     }
     .faq-item.active .faq-answer {
-      max-height: 200px; /* adjust as needed or use auto with JS */
+      max-height: none;  /*Changed from '200px' to 'none' to ensure full display*/
       margin-top: 10px;
     }
   </style>
@@ -983,6 +983,8 @@ Total Net Weight: 5 tons
               <table>
                 <tr><td>Card insertion for power / card removal to cut off power</td><td></td></tr>
                 <tr><td>Multi-scene mode function panel</td><td></td></tr>
+                <tr><td>Lighting smart control</td><td></td></tr>
+                <tr><td>Curtain smart control</td><td></td></tr>
               </table>
             </div>
           </div>
