--- a/index.html
+++ b/index.html
@@ -803,6 +803,7 @@ Total Net Weight: 5 tons
         <input type="hidden" name="_template" value="table">
         <input type="hidden" name="_autoresponse" value="Thank you for your enquiry. We will get back to you shortly.">
         <input type="hidden" name="_next" value="https://truefutureliving.com/thank-you.html">
+        <input type="hidden" name="full_enquiry_details" id="fullEnquiryDetails">
         
         <div id="modelSelectionContainer" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); gap: 10px; margin: 10px 0;">
           <!-- Alphabetical Order of Models -->
@@ -1066,6 +1067,7 @@ Total Net Weight: 5 tons
           <i class="fab fa-facebook"></i>
         </a>
       </p>
+      <p class="footer-email">Email: <a href="mailto:sales@truefutureliving.com">sales@truefutureliving.com</a></p>
       <p>&copy; 2025 True Future Living. All rights reserved.</p>
     </div>
   </footer>
