--- a/index.html
+++ b/index.html
@@ -410,7 +410,6 @@
         <li><a href="index.html" class="nav-link active">Home</a></li>
         <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         <li><a href="about.html" class="nav-link">About</a></li>
-        <li><a href="income-ideas.html" class="nav-link">Income Ideas</a></li>
         <li><a href="#enquiry" class="nav-link">Enquiry</a></li>
       </ul>
     </div>
@@ -794,9 +793,7 @@ Total Net Weight: 5 tons
     <!-- Enquiry Section -->
     <section id="enquiry" class="container section">
       <h2>Make an Enquiry</h2>
-      <div id="productInfo">
-        <!-- Product info injected here if a model is preselected -->
-      </div>
+      <p class="enquiry-info">All choices and information will be sent directly to our email: <a href="mailto:sales@truefutureliving.com">sales@truefutureliving.com</a>.</p>
       <form id="enquiryForm" action="https://formsubmit.co/sales@truefutureliving.com" method="POST">
         <!-- FormSubmit Configuration -->
         <input type="hidden" name="_subject" value="New True Future Living Enquiry">
