--- a/product.html
+++ b/product.html
@@ -275,7 +275,7 @@
     <div id="productInfo">
       <!-- Product info injected here if a model is preselected -->
     </div>
-    <form id="enquiryForm" action="https://formsubmit.co/sales@truefutureliving.com" method="POST">
+    <form id="enquiryForm" action="https://formsubmit.co/7da2db83e6e7e4f465b79c28c0aecab7" method="POST">
       <!-- FormSubmit Configuration -->
       <input type="hidden" name="_subject" value="New True Future Living Product Enquiry">
       <input type="hidden" name="_template" value="table">
