--- a/index.html
+++ b/index.html
@@ -794,12 +794,12 @@ Total Net Weight: 5 tons
     <section id="enquiry" class="container section">
       <h2>Make an Enquiry</h2>
       <p class="enquiry-info">All choices and information will be sent directly to our email: <a href="mailto:sales@truefutureliving.com">sales@truefutureliving.com</a>.</p>
-      <form id="enquiryForm" action="https://formsubmit.co/7da2db83e6e7e4f465b79c28c0aecab7" method="POST">
+      <form id="enquiryForm" action="https://formsubmit.co/sales@truefutureliving.com" method="POST">
         <!-- FormSubmit Configuration -->
         <input type="hidden" name="_subject" value="New True Future Living Enquiry">
         <input type="hidden" name="_template" value="table">
         <input type="hidden" name="_autoresponse" value="Thank you for your enquiry. We will get back to you shortly.">
-        <input type="hidden" name="_next" value="https://truefutureliving.com/thank-you.html">
+        <input type="hidden" name="_next" value="thank-you.html">
         <input type="hidden" name="full_enquiry_details" id="fullEnquiryDetails">
         
         <div id="modelSelectionContainer" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); gap: 10px; margin: 10px 0;">
