--- a/product.html
+++ b/product.html
@@ -275,12 +275,12 @@
     <div id="productInfo">
       <!-- Product info injected here if a model is preselected -->
     </div>
-    <form id="enquiryForm" action="https://formsubmit.co/7da2db83e6e7e4f465b79c28c0aecab7" method="POST">
+    <form id="enquiryForm" action="https://formsubmit.co/sales@truefutureliving.com" method="POST">
       <!-- FormSubmit Configuration -->
       <input type="hidden" name="_subject" value="New True Future Living Product Enquiry">
       <input type="hidden" name="_template" value="table">
       <input type="hidden" name="_autoresponse" value="Thank you for your enquiry. We will get back to you shortly.">
-      <input type="hidden" name="_next" value="https://truefutureliving.com/thank-you.html">
+      <input type="hidden" name="_next" value="thank-you.html">
       <input type="hidden" name="full_enquiry_details" id="fullEnquiryDetails">
       <input type="hidden" name="product_model" id="productModel">
       
