--- a/thank-you.html
+++ b/thank-you.html
@@ -6,14 +6,98 @@
     <title>Thank You - True Future Living</title>
     <link href="https://fonts.googleapis.com/css?family=Orbitron:400,700|Roboto:400,300,500" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+      .thank-you-container {
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 20px;
+      }
+      
+      .thank-you-message {
+        background: rgba(255, 255, 255, 0.95);
+        padding: 40px;
+        border-radius: 15px;
+        box-shadow: 0 0 25px rgba(0, 255, 255, 0.3);
+        max-width: 600px;
+        width: 90%;
+        position: relative;
+        overflow: hidden;
+        animation: fadeIn 0.5s ease-out;
+      }
+
+      .thank-you-message::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 4px;
+        background: linear-gradient(90deg, #00c3ff, #ffff1c);
+      }
+
+      .thank-you-message h1 {
+        font-family: 'Orbitron', sans-serif;
+        font-size: 2.5em;
+        margin-bottom: 20px;
+        color: #333;
+        text-transform: uppercase;
+      }
+
+      .thank-you-message p {
+        font-family: 'Roboto', sans-serif;
+        font-size: 1.2em;
+        color: #666;
+        margin-bottom: 30px;
+        line-height: 1.6;
+      }
+
+      .back-btn {
+        display: inline-block;
+        padding: 12px 30px;
+        font-family: 'Orbitron', sans-serif;
+        font-size: 1.1em;
+        color: #fff;
+        background-image: linear-gradient(135deg, #00c3ff, #ffff1c);
+        border: none;
+        border-radius: 6px;
+        text-decoration: none;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+      }
+
+      .back-btn:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 5px 15px rgba(0, 195, 255, 0.3);
+      }
+
+      @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(20px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <div class="thank-you-message">
-            <h1>Thank You!</h1>
-            <p>Your enquiry has been received. We will get back to you shortly.</p>
-            <a href="index.html" class="back-btn">Return to Homepage</a>
+    <canvas id="bgCanvas"></canvas>
+    <!-- Header -->
+    <header id="header">
+      <div class="container header-container">
+        <div class="logo-container">
+          <img src="images/logo.png" alt="True Future Living Logo">
         </div>
+        <h1 class="business-name">True Future Living</h1>
+      </div>
+    </header>
+
+    <div class="thank-you-container">
+      <div class="thank-you-message">
+        <h1>Thank You for Your Enquiry</h1>
+        <p>Your message has been successfully sent to our team. We will review your requirements and get back to you shortly with detailed information about your selected models and configurations.</p>
+        <a href="index.html" class="back-btn">Return to Homepage</a>
+      </div>
     </div>
+
+    <script src="js/bg-animation.js"></script>
 </body>
 </html> 
