--- a/index.html
+++ b/index.html
@@ -794,12 +794,10 @@ Total Net Weight: 5 tons
     <section id="enquiry" class="container section">
       <h2>Make an Enquiry</h2>
       <p class="enquiry-info">All choices and information will be sent directly to our email: <a href="mailto:sales@truefutureliving.com">sales@truefutureliving.com</a>.</p>
-      <form id="enquiryForm" action="https://formsubmit.co/sales@truefutureliving.com" method="POST">
-        <!-- FormSubmit Configuration -->
-        <input type="hidden" name="_subject" value="New True Future Living Enquiry">
-        <input type="hidden" name="_template" value="table">
-        <input type="hidden" name="_autoresponse" value="Thank you for your enquiry. We will get back to you shortly.">
-        <input type="hidden" name="_next" value="thank-you.html">
+      <form id="enquiryForm" action="https://api.web3forms.com/submit" method="POST">
+        <input type="hidden" name="access_key" value="ce93f93e-6030-4904-9aab-d71a48dab1f0">
+        <input type="hidden" name="subject" value="New True Future Living Enquiry">
+        <input type="hidden" name="from_name" id="from_name">
         <input type="hidden" name="full_enquiry_details" id="fullEnquiryDetails">
         
         <div id="modelSelectionContainer" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); gap: 10px; margin: 10px 0;">
@@ -1075,6 +1073,12 @@ Total Net Weight: 5 tons
   <script src="js/bg-animation.js"></script>
   <!-- Shared JS -->
   <script src="js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <script>
+    (function() {
+      emailjs.init("YOUR_PUBLIC_KEY"); // Add your EmailJS public key here
+    })();
+  </script>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       // Pre-populate enquiry form based on query parameters (if any)
