--- a/product.html
+++ b/product.html
@@ -275,12 +275,10 @@
     <div id="productInfo">
       <!-- Product info injected here if a model is preselected -->
     </div>
-    <form id="enquiryForm" action="https://formsubmit.co/sales@truefutureliving.com" method="POST">
-      <!-- FormSubmit Configuration -->
-      <input type="hidden" name="_subject" value="New True Future Living Product Enquiry">
-      <input type="hidden" name="_template" value="table">
-      <input type="hidden" name="_autoresponse" value="Thank you for your enquiry. We will get back to you shortly.">
-      <input type="hidden" name="_next" value="thank-you.html">
+    <form id="enquiryForm" action="https://api.web3forms.com/submit" method="POST">
+      <input type="hidden" name="access_key" value="ce93f93e-6030-4904-9aab-d71a48dab1f0">
+      <input type="hidden" name="subject" value="New True Future Living Product Enquiry">
+      <input type="hidden" name="from_name" id="from_name">
       <input type="hidden" name="full_enquiry_details" id="fullEnquiryDetails">
       <input type="hidden" name="product_model" id="productModel">
       
