--- a/index.html
+++ b/index.html
@@ -429,6 +429,7 @@
       <!-- Gallery Section -->
       <section class="gallery-section">
         <div class="gallery-container">
+          <button class="gallery-scroll-btn gallery-scroll-left">←</button>
           <img src="images/gallery1.png" alt="Gallery Image 1">
           <img src="images/gallery2.png" alt="Gallery Image 2">
           <img src="images/gallery3.png" alt="Gallery Image 3">
@@ -439,6 +440,7 @@
           <img src="images/gallery8.png" alt="Gallery Image 8">
           <img src="images/gallery9.png" alt="Gallery Image 9">
           <img src="images/gallery10.png" alt="Gallery Image 10">
+          <button class="gallery-scroll-btn gallery-scroll-right">→</button>
         </div>
       </section>
     </section>
