--- a/product.html
+++ b/product.html
@@ -420,14 +420,14 @@
     const containerModels = {
       "G30": {
         name: "G30",
-        price: "US$13,500",
+        price: "US$15120",
         description: `Building area: 18㎡
 Length: 5.6m
 Width: 3.6m
 Height: 3.2m
 Occupancy: 2 people
 Maximum Power: 8KW (with floor heating)
-Total Net Weight: 4 tons`,
+Total Net Weight: 4.5 tons`,
         image: "images/G30.png",
         showcase: [
           "images/G30_showcase1.png",
@@ -436,7 +436,7 @@ Total Net Weight: 4 tons`,
       },
       "G50": {
         name: "G50",
-        price: "US$24,000",
+        price: "US$25496",
         description: `Building area: 31.4㎡
 Length: 9.5m
 Width: 3.3m
@@ -452,7 +452,7 @@ Total Net Weight: 7 tons`,
       },
       "G50F": {
         name: "G50F",
-        price: "US$24,700",
+        price: "US$26128",
         description: `Building area: 31.4㎡
 Length: 9.5m
 Width: 3.3m
@@ -468,12 +468,12 @@ Total Net Weight: 7 tons`,
       },
       "G70": {
         name: "G70",
-        price: "US$29,400",
+        price: "US$30954",
         description: `Building area: 38.0㎡
 Length: 11.5m
 Width: 3.3m
 Height: 3.2m
-Occupancy: 2 people
+Occupancy: 4 people
 Maximum Power: 11.5KW / 17KW (with floor heating)
 Total Net Weight: 9 tons`,
         image: "images/G70.png",
@@ -484,7 +484,7 @@ Total Net Weight: 9 tons`,
       },
       "G70F": {
         name: "G70F",
-        price: "US$30,000",
+        price: "US$31586",
         description: `Building area: 38.0㎡
 Length: 11.5m
 Width: 3.3m
@@ -500,9 +500,9 @@ Total Net Weight: 9 tons`,
       },
       "L50": {
         name: "L50",
-        price: "US$24,000",
+        price: "US$25496",
         description: `Building area: 30.0㎡
-Length: 9.1m
+Length: 9.3m
 Width: 3.3m
 Height: 3.4m
 Occupancy: 2 people
@@ -516,9 +516,9 @@ Total Net Weight: 7 tons`,
       },
       "L50F": {
         name: "L50F",
-        price: "US$24,700",
+        price: "US$26128",
         description: `Building area: 30.0㎡
-Length: 9.1m
+Length: 9.3m
 Width: 3.3m
 Height: 3.4m
 Occupancy: 2 people
@@ -532,11 +532,11 @@ Total Net Weight: 7 tons`,
       },
       "L70": {
         name: "L70",
-        price: "US$27,500",
+        price: "US$29141",
         description: `Building area: 38.0㎡
 Length: 11.5m
 Width: 3.3m
-Height: 3.2m
+Height: 3.4m
 Occupancy: 2-4 people
 Maximum Power: 10KW / 15KW (with floor heating)
 Total Net Weight: 8 tons`,
@@ -548,14 +548,14 @@ Total Net Weight: 8 tons`,
       },
       "A30": {
         name: "A30",
-        price: "US$14,600",
+        price: "US$16065",
         description: `Building area: 15.7㎡
-Length: 5.6m
+Length: 5.8m
 Width: 2.8m
-Height: 3.2m
+Height: 3.1m
 Occupancy: 2 people
 Maximum Power: 6.7KW / 11.2KW (with floor heating)
-Total Net Weight: 5 tons`,
+Total Net Weight: 4 tons`,
         image: "images/A30.png",
         showcase: [
           "images/A30_showcase1.png",
@@ -564,7 +564,7 @@ Total Net Weight: 5 tons`,
       },
       "A50": {
         name: "A50",
-        price: "US$19,300",
+        price: "US$20886",
         description: `Building area: 31.4㎡
 Length: 9.5m
 Width: 3.3m
@@ -580,11 +580,11 @@ Total Net Weight: 7 tons`,
       },
       "A70": {
         name: "A70",
-        price: "US$23,200",
+        price: "US$24570",
         description: `Building area: 38.0㎡
 Length: 11.5m
 Width: 3.3m
-Height: 3.4m
+Height: 3.3m
 Occupancy: 2-4 people
 Maximum Power: 9.9KW / 15.4KW (with floor heating)
 Total Net Weight: 9 tons`,
@@ -596,7 +596,7 @@ Total Net Weight: 9 tons`,
       },
       "M50": {
         name: "M50",
-        price: "US$21,600",
+        price: "US$23066",
         description: `Building area: 29.8㎡
 Length: 9.3m
 Width: 3.2m
@@ -612,12 +612,12 @@ Total Net Weight: 7 tons`,
       },
       "M70": {
         name: "M70",
-        price: "US$27,900",
+        price: "US$29025",
         description: `Building area: 36.8㎡
 Length: 11.5m
 Width: 3.2m
 Height: 3.2m
-Occupancy: 2 people
+Occupancy: 4 people
 Maximum Power: 11.5KW / 17KW (with floor heating)
 Total Net Weight: 9 tons`,
         image: "images/M70.png",
@@ -628,7 +628,7 @@ Total Net Weight: 9 tons`,
       },
       "U30": {
         name: "U30",
-        price: "US$17,300",
+        price: "US$19074",
         description: `Building area: 29.9㎡
 Length: 8.3m
 Width: 3.6m
@@ -644,9 +644,9 @@ Total Net Weight: 6 tons`,
       },
       "U50": {
         name: "U50",
-        price: "US$21,500",
+        price: "US$22738",
         description: `Building area: 33.1㎡
-Length: 9.5m
+Length: 9.2m
 Width: 3.6m
 Height: 3.2m
 Occupancy: 2 people
@@ -661,12 +661,14 @@ Total Net Weight: 7 tons`,
       "U": {
         name: "U",
         price: "US$24,500",
-        description: `Building area: 33.0㎡
-Diameter: 6.5m
+        description: `Building area: 14㎡
+Length: 4.5m
+Width: 4.5m
 Height: 3.2m
-Occupancy: 2-4 people
+Occupancy: 2 people
 Maximum Power: 10KW (with floor heating)
-Total Net Weight: 5 tons`,
+Total Net Weight: 2.8 tons
+Price: US$24,500`,
         image: "images/U.png",
         showcase: [
           { src: "images/U_2.png", type: "image" },
