--- a/enquiry.html
+++ b/enquiry.html
@@ -79,17 +79,17 @@
   <!-- Gallery Section -->
   <section id="gallery" class="container section">
     <h2>Gallery</h2>
-    <div class="gallery-grid">
-      <img src="images/gallery1.png" alt="Gallery Image 1">
-      <img src="images/gallery2.png" alt="Gallery Image 2">
-      <img src="images/gallery3.png" alt="Gallery Image 3">
-      <img src="images/gallery4.png" alt="Gallery Image 4">
-      <img src="images/gallery5.png" alt="Gallery Image 5">
-      <img src="images/gallery6.png" alt="Gallery Image 6">
-      <img src="images/gallery7.png" alt="Gallery Image 7">
-      <img src="images/gallery8.png" alt="Gallery Image 8">
-      <img src="images/gallery9.png" alt="Gallery Image 9">
-      <img src="images/gallery10.png" alt="Gallery Image 10">
+    <div class="gallery-container">
+      <img src="images/gallery1.png" alt="Gallery Image 1" class="gallery-image">
+      <img src="images/gallery2.png" alt="Gallery Image 2" class="gallery-image">
+      <img src="images/gallery3.png" alt="Gallery Image 3" class="gallery-image">
+      <img src="images/gallery4.png" alt="Gallery Image 4" class="gallery-image">
+      <img src="images/gallery5.png" alt="Gallery Image 5" class="gallery-image">
+      <img src="images/gallery6.png" alt="Gallery Image 6" class="gallery-image">
+      <img src="images/gallery7.png" alt="Gallery Image 7" class="gallery-image">
+      <img src="images/gallery8.png" alt="Gallery Image 8" class="gallery-image">
+      <img src="images/gallery9.png" alt="Gallery Image 9" class="gallery-image">
+      <img src="images/gallery10.png" alt="Gallery Image 10" class="gallery-image">
     </div>
   </section>
 
