--- a/index.html
+++ b/index.html
@@ -401,6 +401,14 @@
       <div class="logo-container">
         <a href="index.html"><img src="images/logo.png" alt="True Future Living Logo"></a>
       </div>
+      <div class="mobile-menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <nav class="main-nav">
+        <!-- Navigation menu items -->
+      </nav>
     </div>
   </header>
 
