--- a/index.html
+++ b/index.html
@@ -401,13 +401,19 @@
       <div class="logo-container">
         <a href="index.html"><img src="images/logo.png" alt="True Future Living Logo"></a>
       </div>
-      <div class="mobile-menu-toggle">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <nav class="main-nav">
-        <!-- Navigation menu items -->
+      <button id="mobile-menu-btn" aria-label="Toggle menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </button>
+      <nav id="primary-nav">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#portfolio">Models</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="income-ideas.html">Income Ideas</a></li>
+          <li><a href="enquiry.html">Enquire</a></li>
+        </ul>
       </nav>
     </div>
   </header>
