--- a/index.html
+++ b/index.html
@@ -401,34 +401,24 @@
       <div class="logo-container">
         <a href="index.html"><img src="images/logo.png" alt="True Future Living Logo"></a>
       </div>
-      <button id="mobile-menu-btn" aria-label="Toggle menu">
+      <!-- Mobile Menu Toggle Button -->
+      <button id="mobileMenuToggle" class="mobile-menu-toggle">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
       </button>
-      <nav id="primary-nav">
+      
+      <!-- Navigation Menu -->
+      <nav id="mainNav" class="main-nav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#portfolio">Models</a></li>
+          <li><a href="#portfolio">Products</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="income-ideas.html">Income Ideas</a></li>
-          <li><a href="enquiry.html">Enquire</a></li>
+          <li><a href="enquiry.html">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
-
-  <!-- Navigation -->
-  <nav>
-    <div class="container nav-container">
-      <ul>
-        <li><a href="index.html" class="nav-link active">Home</a></li>
-        <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-        <li><a href="about.html" class="nav-link">About</a></li>
-        <li><a href="#enquiry" class="nav-link">Enquiry</a></li>
-      </ul>
-    </div>
-  </nav>
 
   <!-- Main Content Wrapper -->
   <div id="mainContent">
