--- a/index.html
+++ b/index.html
@@ -398,26 +398,21 @@
   <!-- Header -->
   <header id="header">
     <div class="container header-container">
-      <div class="logo-container">
+      <div class="logo-container centered">
         <a href="index.html"><img src="images/logo.png" alt="True Future Living Logo"></a>
       </div>
-      <!-- Mobile Menu Toggle Button -->
-      <button id="mobileMenuToggle" class="mobile-menu-toggle">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </button>
-      
-      <!-- Navigation Menu -->
-      <nav id="mainNav" class="main-nav">
+    </div>
+    <!-- Horizontal Navigation Menu -->
+    <nav id="mainNav" class="horizontal-nav">
+      <div class="container">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="#portfolio">Products</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="enquiry.html">Contact</a></li>
         </ul>
-      </nav>
-    </div>
+      </div>
+    </nav>
   </header>
 
   <!-- Main Content Wrapper -->
