--- a/index.html
+++ b/index.html
@@ -407,9 +407,9 @@
       <div class="container">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#portfolio">Products</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="enquiry.html">Contact</a></li>
+          <li><a href="portfolio.html">Models Portfolio</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="index.html#enquiry">Enquiry</a></li>
         </ul>
       </div>
     </nav>
@@ -684,7 +684,7 @@ Total Net Weight: 5 tons
     </section>
 
     <!-- Innovative Income Ideas Section -->
-    <section id="income-ideas" class="container section">
+    <section id="income-ideas" class="container section innovative-income">
       <h2>Innovative Income Ideas</h2>
       <div class="stock">
         <div class="stock-item">
