--- a/product.html
+++ b/product.html
@@ -237,20 +237,19 @@
   <!-- Header -->
   <header id="header">
     <div class="container header-container">
-      <div class="logo-container">
+      <div class="logo-container centered">
         <a href="index.html"><img src="images/logo.png" alt="True Future Living Logo"></a>
       </div>
-      <h1 class="business-name">True Future Living</h1>
     </div>
   </header>
-  <!-- Navigation -->
-  <nav>
-    <div class="container nav-container">
+  <!-- Horizontal Navigation Menu -->
+  <nav id="mainNav" class="horizontal-nav">
+    <div class="container">
       <ul>
-        <li><a href="index.html" class="nav-link">Home</a></li>
-        <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-        <li><a href="about.html" class="nav-link">About</a></li>
-        <li><a href="#enquiry" class="nav-link">Enquiry</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="portfolio.html">Models Portfolio</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="index.html#enquiry">Enquiry</a></li>
       </ul>
     </div>
   </nav>
