--- a/product.html
+++ b/product.html
@@ -659,15 +659,14 @@ Total Net Weight: 7 tons`,
       },
       "U": {
         name: "U",
-        price: "US$24,500",
+        price: "US$16,500",
         description: `Building area: 14㎡
 Length: 4.5m
 Width: 4.5m
 Height: 3.2m
 Occupancy: 2 people
 Maximum Power: 10KW (with floor heating)
-Total Net Weight: 2.8 tons
-Price: US$16,000`,
+Total Net Weight: 2.8 tons`,
         image: "images/U.png",
         showcase: [
           { src: "images/U_2.png", type: "image" },
