--- a/index.html
+++ b/index.html
@@ -993,19 +993,34 @@ Total Net Weight: 2.8 tons
           </div>
         </div>
         <div class="faq-item">
-          <button class="faq-question">Can I customize my capsule home?</button>
+          <button class="faq-question">Do you offer international shipping?</button>
           <div class="faq-answer">
             <p>
-              Yes! Customization is a core part of our service. Choose your fixtures, colors, layouts, and advanced tech upgrades to create a space that's uniquely yours.
+              Absolutely. We partner with reputable global logistics providers to ensure your capsule home reaches you securely, no matter where you are. Costs are variable to location and quantity, an accurate quote can be presented in consultation.
             </p>
           </div>
         </div>
         <div class="faq-item">
-          <button class="faq-question">Do you offer international shipping?</button>
+          <button class="faq-question">How does the process work?</button>
           <div class="faq-answer">
-            <p>
-              Absolutely. We partner with reputable global logistics providers to ensure your capsule home reaches you securely, no matter where you are.
-            </p>
+            <p>Our process is designed to be transparent and client-focused:</p>
+            <p><strong>Initial Consultation:</strong> We begin with a detailed discussion of your specific requirements for both interior and exterior specifications.</p>
+            <p><strong>Design & Quote:</strong> Our team develops a comprehensive design proposal and provides a detailed quote based on your requirements.</p>
+            <p><strong>Payment Structure:</strong> Upon finalizing the design and quote:</p>
+            <ul>
+              <li>50% deposit is required to commence the build process</li>
+              <li>Remaining 50% is due upon completion, before shipping</li>
+            </ul>
+            <p><strong>Construction Phase:</strong> Regular updates and progress reports are provided throughout the build process.</p>
+            <p><strong>Quality Assurance:</strong> Rigorous quality checks are performed before shipping approval.</p>
+            <p><strong>Delivery & Installation:</strong> Upon arrival at the delivery location, our team provides:</p>
+            <ul>
+              <li>Detailed installation guidelines</li>
+              <li>Technical support</li>
+              <li>Connection assistance for utilities</li>
+              <li>Final setup verification</li>
+            </ul>
+            <p>Throughout the entire process, you'll have a dedicated project manager ensuring smooth communication and timely delivery of your custom living space.</p>
           </div>
         </div>
       </div>
