--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@ Total Net Weight: 2.8 tons
                 </tr>
                 <tr>
                   <td>Mini refrigerator</td>
-                  <td>USD$600</td>
+                  <td>USD$500</td>
                 </tr>
                 <tr>
                   <td>Custom furniture: cabinets / wall cabinets</td>
@@ -996,7 +996,7 @@ Total Net Weight: 2.8 tons
           <button class="faq-question">Do you offer international shipping?</button>
           <div class="faq-answer">
             <p>
-              Absolutely. We partner with reputable global logistics providers to ensure your capsule home reaches you securely, no matter where you are. Costs are variable to location and quantity, an accurate quote can be presented in consultation.
+              Absolutely. We partner with reputable global logistics providers to ensure your capsule home reaches you securely, no matter where you are. Pricing is variable based on the destination and amount of units ordered, a full quote will be provided after consultation !
             </p>
           </div>
         </div>
