--- a/product.html
+++ b/product.html
@@ -419,18 +419,18 @@
     const containerModels = {
       "G30": {
         name: "G30",
-        price: "US$15120",
+        price: "US$14,920",
         description: `Building area: 18㎡
 Length: 5.6m
 Width: 3.6m
 Height: 3.2m
 Occupancy: 2 people
 Maximum Power: 8KW (with floor heating)
-Total Net Weight: 4.5 tons`,
+Total Net Weight: 4 tons`,
         image: "images/G30.png",
         showcase: [
-          "images/G30_showcase1.png",
-          "images/G30_showcase2.png"
+          { src: "images/G30_2.png", type: "image" },
+          { src: "images/G30_3.png", type: "image" }
         ]
       },
       "G50": {
