--- a/index.html
+++ b/index.html
@@ -408,6 +408,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="portfolio.html">Models Portfolio</a></li>
+          <li><a href="aquaponic-farming.html">Aquaponic Container Farming</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="index.html#enquiry">Enquiry</a></li>
         </ul>
@@ -1008,8 +1009,8 @@ Total Net Weight: 2.8 tons
             <p><strong>Design & Quote:</strong> Our team develops a comprehensive design proposal and provides a detailed quote based on your requirements.</p>
             <p><strong>Payment Structure:</strong> Upon finalizing the design and quote:</p>
             <ul>
-              <li>50% deposit is required to commence the build process</li>
-              <li>Remaining 50% is due upon completion, before shipping</li>
+              <li>60% deposit is required to commence the build process</li>
+              <li>Remaining 40% is due upon completion, before shipping</li>
             </ul>
             <p><strong>Construction Phase:</strong> Regular updates and progress reports are provided throughout the build process.</p>
             <p><strong>Quality Assurance:</strong> Rigorous quality checks are performed before shipping approval.</p>
