--- a/aquaponic-farming.html
+++ b/aquaponic-farming.html
@@ -184,18 +184,29 @@
       grid-row: span 2;
     }
 
+    /* Mobile responsive gallery */
+    @media (max-width: 768px) {
+      .gallery-grid {
+        grid-template-columns: 1fr;
+        gap: 15px;
+      }
+      
+      .gallery-item:nth-child(n) {
+        grid-column: 1;
+        grid-row: auto;
+      }
+      
+      .gallery-item {
+        height: 250px;
+      }
+    }
+
     .gallery-item img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       display: block;
       transition: transform 0.3s ease;
-    }
-
-    .gallery-item:hover {
-      transform: scale(1.02);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-      z-index: 2;
     }
 
     /* Enhanced hover effect */
