--- a/aquaponic-farming.html
+++ b/aquaponic-farming.html
@@ -1535,7 +1535,7 @@
 
     <!-- Container Setups Section -->
     <section id="container-setups">
-      <h2>Specialized Container Systems</h2>
+      <h2>3 Types of Container Systems</h2>
       <div class="setups-container">
         <!-- Leafy Greens & Berries Setup -->
         <div class="setup-card">
