--- a/aquaponic-farming.html
+++ b/aquaponic-farming.html
@@ -3246,7 +3246,7 @@
           <h2>Ready to Start Your Aquaponic Journey?</h2>
           <p>Our team of experts is ready to help you select the perfect container farming solution. Fill out the form below, and we'll get back to you within 24 hours.</p>
           
-          <form id="enquiry-form" class="enquiry-form" action="https://api.web3forms.com/submit" method="POST">
+          <form id="enquiryForm" class="enquiry-form" action="https://api.web3forms.com/submit" method="POST">
             <input type="hidden" name="access_key" value="ce93f93e-6030-4904-9aab-d71a48dab1f0">
             <input type="hidden" name="subject" value="New Aquaponic Container Farming Enquiry">
             <input type="hidden" name="from_name" id="from_name">
@@ -3389,7 +3389,7 @@
       const selectedModelsList = document.getElementById('selectedModelsList');
       const selectedCount = document.getElementById('selectedCount');
       const selectedModelsInput = document.getElementById('selectedModelsInput');
-      const enquiryForm = document.getElementById('enquiry-form');
+      const enquiryForm = document.getElementById('enquiryForm');
       
       // Function to update selected models display
       function updateSelectedModels() {
